test/tests/errors/error-assign-const.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = 1;
    x = 1;
}